Atualização de desenvolvimento

--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,5 @@
 }
 
 body {
-  background-color: aliceblue;
-  font-family: "Sora", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
+  background-color: #FCFCFC;
 }
