--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,15 @@
 body {
   background-color: #FCFCFC;
 }
+
+.mapContainer {
+  width: 100rem;
+  height: 35rem;
+  border-radius: 1rem;
+}
+
+@media (max-width: 1070px) {
+  .mapContainer {
+    width: 95%;
+  }
+}
